# ai_backend

./: README.md  run_all.sh
analysis_server/: flask_anal_server.py
analysis_server/prodwise_activity/: CerealsSection.json  Cereals_Copurchase2.json  FishSection2.json  anam_output_camera_wise_interaction_window.json  output_camera_wise_buckets.json  output_camera_wise_interaction_window.json
camera_server/: flaskk.py  requirements.txt
sclbl-integration-sdk-main/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  external_postprocessors.json  run_all.sh
sclbl-integration-sdk-main/postprocessor-python-cereal/: CMakeLists.txt  Makefile  cmake_install.cmake  postprocessor-python-cereal.py
sclbl-integration-sdk-main/postprocessor-python-fish/: CMakeLists.txt  Makefile  cmake_install.cmake  postprocessor-python-fish.py
sclbl-integration-sdk-main/sclbl-utilities/: Makefile  cmake_install.cmake
